--- a/composer.json
+++ b/composer.json
@@ -17,25 +17,34 @@
         "php": ">=5.4.0",
         "yiisoft/yii2": "~2.0.6",
         "yiisoft/yii2-bootstrap": "~2.0.0",
-        "yiisoft/yii2-swiftmailer": "~2.0.0 || ~2.1.0",
-        "kartik-v/yii2-grid": "@dev",
+        "kartik-v/yii2-widgets": "*",
         "symfony/dom-crawler": "v3.3.8",
+        "symfony/css-selector": "v3.3.0",
+        "jonnyw/php-phantomjs": "v4.6.0",
+        "jakoch/phantomjs-installer": "2.1.1-p08",
         "guzzlehttp/guzzle": "~6.0"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.0.0",
         "yiisoft/yii2-gii": "~2.0.0",
-        "yiisoft/yii2-faker": "~2.0.0",
-        "codeception/base": "^2.2.3",
-        "codeception/verify": "~0.3.1"
+        "yiisoft/yii2-faker": "~2.0.0"
+    },
+    "scripts": {
+        "post-install-cmd": [
+            "PhantomInstaller\\Installer::installPhantomJS"
+        ],
+        "post-update-cmd": [
+            "PhantomInstaller\\Installer::installPhantomJS"
+        ]
     },
     "config": {
+        "bin-dir": "bin",
         "process-timeout": 1800
     },
-    "repositories": [
-        {
+    "repositories": {
+        "packagist": {
             "type": "composer",
-            "url": "https://asset-packagist.org"
+            "url": "https://packagist.phpcomposer.com"
         }
-    ]
+    }
 }
